eks/setup-eks-cluster/k8s/report-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-app
  namespace: default
  labels:
    app: report-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: report-app
  template:
    metadata:
      labels:
        app: report-app
    spec:
      serviceAccountName: streamlit-app-sa
      containers:
      - name: report-app
        image: 248189947068.dkr.ecr.us-east-1.amazonaws.com/report-app:latest
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: report-app-service
  namespace: default
  labels:
    app: report-app
spec:
  type: ClusterIP
  selector:
    app: report-app
  ports:
  - port: 80
    targetPort: 8501
