eks/setup-eks-cluster/k8s/sqlserver.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: funasa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: funasa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sqlserver-data
          mountPath: /var/opt/mssql
      volumes:
      - name: sqlserver-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  namespace: funasa
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: sqlserver
  ports:
  - port: 1433
    targetPort: 1433
