eks/setup-eks-cluster/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-iesb
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:248189947068:certificate/6d8e0740-fa40-4171-aff9-7cd815b6e2e8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
  - host: app.dataiesb.com
    http:
      paths:
      - path: /osintube
        pathType: Prefix
        backend:
          service:
            name: osintube-service
            port:
              number: 80
      - path: /report
        pathType: Prefix
        backend:
          service:
            name: report-app-service
            port:
              number: 80
      - path: /s33ding
        pathType: Prefix
        backend:
          service:
            name: s33ding-redirect
            port:
              number: 80
